Materialize and accordion setup

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,24 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Document</title>
-</head>
-<body>
-    {% for recipe in recipes %}
-        {{recipe.recipe_name}}
-        {{recipe.recipe_description}}
-        {{recipe.meal_course_type}}
-        {{recipe.cuisine}}
-        {{recipe.is_vegetarian}}
-        {{recipe.is_vegan}}
-        {{recipe.is_glutenFree}}
-        {{recipe.is_dairyFree}}
-        {{recipe.serves}}
-        {{recipe.prep}}
-        {{recipe.cook}}
-        {{recipe.add_ingredients}}
-        {{recipe.method}}
+{% extends 'base.html' %}
+{% block content %}
 
-    {% endfor %}
-</body>
-</html>
+{% for recipe in recipes %}
+    {{recipe.recipe_name}}
+    {{recipe.recipe_description}}
+    {{recipe.meal_course_type}}
+    {{recipe.cuisine}}
+    {{recipe.is_vegetarian}}
+    {{recipe.is_vegan}}
+    {{recipe.is_glutenFree}}
+    {{recipe.is_dairyFree}}
+    {{recipe.serves}}
+    {{recipe.prep}}
+    {{recipe.cook}}
+    {{recipe.add_ingredients}}
+    {{recipe.method}}
+
+{% endfor %}
+
+<ul class="collapsible" data-collapsible="accordion">
+	<li>
+		<div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+	</li>
+	<li>
+		<div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+	</li>
+	<li>
+		<div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+	</li>
+</ul>
+{% endblock %}
