--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
             $('.collapsible').collapsible();
+            $('select').material_select();
         });
 	</script>
 </body>
