--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,35 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% for recipe in recipes %}
-    {{recipe.recipe_name}}
-    {{recipe.recipe_description}}
-    {{recipe.meal_course_type}}
-    {{recipe.cuisine}}
-    {{recipe.is_vegetarian}}
-    {{recipe.is_vegan}}
-    {{recipe.is_glutenFree}}
-    {{recipe.is_dairyFree}}
-    {{recipe.serves}}
-    {{recipe.prep}}
-    {{recipe.cook}}
-    {{recipe.add_ingredients}}
-    {{recipe.method}}
-
-{% endfor %}
-
 <ul class="collapsible" data-collapsible="accordion">
+    {% for recipe in recipes %}
 	<li>
-		<div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+		<div class="collapsible-header">
+        <strong>{{recipe.recipe_name }}</strong>&nbsp- {{recipe.meal_course_type}} | {{recipe.cuisine}}
+        <i class="material-icons">expand_more</i>
+        </div>
+		<div class="collapsible-body"><span>{{recipe.recipe_description}}</span></div>
 	</li>
-	<li>
-		<div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-	</li>
-	<li>
-		<div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-		<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-	</li>
+    {% endfor %}
 </ul>
 {% endblock %}
