--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,14 +2,26 @@
 {% block content %}
 
 <ul class="collapsible" data-collapsible="accordion">
-    {% for recipe in recipes %}
+	{% for recipe in recipes %}
 	<li>
 		<div class="collapsible-header">
-        <strong>{{recipe.recipe_name }}</strong>&nbsp- {{recipe.meal_course_type}} | {{recipe.cuisine}}
-        <i class="material-icons">expand_more</i>
-        </div>
-		<div class="collapsible-body"><span>{{recipe.recipe_description}}</span></div>
+			<div class="row">
+				<div class="col s11"><strong>{{recipe.recipe_name }}</strong>&nbsp- {{recipe.meal_course_type}} |
+					{{recipe.cuisine}}</div>
+				<div class="col s1"><i class="material-icons">expand_more</i></div>
+			</div>
+		</div>
+		<div class="collapsible-body">
+			<div class="row">
+				<div class="col s10">
+					<span>{{recipe.recipe_description}}</span>
+				</div>
+				<div class="col s2">
+					<a class="waves-effect waves-light btn btn_small">View</a>
+				</div>
+			</div>
+		</div>
 	</li>
-    {% endfor %}
+	{% endfor %}
 </ul>
 {% endblock %}
