--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<h3>Discover Recipes</h3>
+
 <ul class="collapsible" data-collapsible="accordion">
 	{% for recipe in recipes %}
 	<li>
