--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -19,7 +19,7 @@
 					<span>{{recipe.recipe_description}}</span>
 				</div>
 				<div class="col s2">
-					<a class="waves-effect waves-light btn btn_small">View</a>
+					<a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">View</a>
 				</div>
 			</div>
 		</div>
