Fixed bug binding checkbox data to edit form and added update function

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -69,22 +69,34 @@
 		</div>
 
 		<div class="row">
-            <p class="col s3">
-                <input type="checkbox" id="is_vegetarian" class="filled-in"/>
-                <label for="is_vegetarian">Vegetarian</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_vegan" class="filled-in"/>
-                <label for="is_vegan">Vegan</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_glutenFree" class="filled-in"/>
-                <label for="is_glutenFree">Gluten Free</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_dairyFree" class="filled-in"/>
-                <label for="is_dairyFree">Dairy Free</label>
-            </p>
+            <div class="switch col s3">
+                <label>
+                    <input id="is_vegetarian" name="is_vegetarian" type="checkbox">
+                    <span class="lever"></span>
+                    Vegetarian
+                </label>
+            </div>
+            <div class="switch col s3">
+                <label>
+                    <input id="is_vegan" name="is_vegan" type="checkbox">
+                    <span class="lever"></span>
+                    Vegan
+                </label>
+            </div>
+            <div class="switch col s3">
+                <label>
+                    <input id="is_is_glutenFree" name="is_glutenFree" type="checkbox">
+                    <span class="lever"></span>
+                    Gluten Free
+                </label>
+            </div>
+            <div class="switch col s3">
+                <label>
+                    <input id="is_dairyFree" name="is_dairyFree" type="checkbox">
+                    <span class="lever"></span>
+                    Dairy Free
+                </label>
+            </div>    
 		</div>
 
         <div class="row">
