--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -6,108 +6,148 @@
 <div class="row">
 	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12">
 
-        <div class="row">
-            <div class="input-field col s1">
-                <i class="material-icons">add_photo_alternate</i>
-            </div>
+		<div class="row">
+			<div class="input-field col s1">
+				<i class="material-icons">add_photo_alternate</i>
+			</div>
 			<div class="file-field input-field col s6">
 				<div class="file-path-wrapper">
-					<input class="file-path validate" type="text" placeholder="Add photograph">
+					<input id="add_photo" name="add_photo" class="file-path validate" type="text" placeholder="Add photograph" value="{{recipe.add_photo}}">
                 </div>
-                <div class="btn">
-					<span>Select Image</span>
-					<input type="file">
+					<div class="btn">
+						<span>Select Image</span>
+						<input type="file">
                 </div>
-            </div>
-		</div>
+					</div>
+				</div>
 
-		<div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">create</i>
-				<input id="recipe_name" name="recipe_name" type="text" class="validate">
-				<label for="icon_prefix">Recipe Name</label>
-			</div>
-		</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">create</i>
+						<input id="recipe_name" name="recipe_name" type="text" class="validate" value="{{recipe.recipe_name}}">
+						<label for="icon_prefix">Recipe Name</label>
+					</div>
+				</div>
 
-		<div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">subject</i>
-				<input id="recipe_description" name="recipe_description" type="text" class="materialize-textarea">
-				<label for="icon_telephone">Recipe Description</label>
-			</div>
-		</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">subject</i>
+						<textarea id="recipe_description" name="recipe_description" type="text" class="materialize-textarea">{{recipe.recipe_description}}</textarea>
+						<label for="icon_telephone">Recipe Description</label>
+					</div>
+				</div>
 
-        <div class="row">
-            <div class="input-field col s3">
-            <i class="material-icons prefix">restaurant</i>
-                <select multiple id="meals_courses" name="meal_course_type">
+				<div class="row">
+					<div class="input-field col s3">
+						<i class="material-icons prefix">restaurant</i>
+						<select multiple id="meals_courses" name="meal_course_type">
                     <option value="" disabled selected>Mealtimes and Courses</option>
                     {% for meals in meals_courses %}
+                        {% if meals.meal_course_type == recipe.meal_course_type %}
+                        <option value="{{meals.meal_course_type}}" selected >{{meals.meal_course_type}}</option>
+                        {% else %}
                         <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
+                    {% endif %}
                     {% endfor %}
                 </select>
-            </div>
-            <div class="input-field col s3">
-            <i class="material-icons prefix">fastfood</i>
-                <select id="cuisines" name="cuisine">
+					</div>
+					<div class="input-field col s3">
+						<i class="material-icons prefix">fastfood</i>
+						<select id="cuisines" name="cuisine">
                     <option value="" disabled selected>Cuisines</option>
                     {% for cuis in cuisines %}
+                        {% if cuis.cuisine == recipe.cuisine %}
+                        <option value="{{cuis.cuisine}}" selected >{{cuis.cuisine}}</option>
+                        {% else %}
                         <option value="{{cuis.cuisine}}">{{cuis.cuisine}}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
-            </div>
-            <div class="input-field col s3">
-				<i class="material-icons prefix">people_outline</i>
-				<input id="serves" name="serves" type="number" class="materialize-textarea">
-				<label for="serves">Serves</label>
-			</div>
-            <div class="input-field col s3">
-				<i class="material-icons prefix">access_time</i>
-				<input id="time" name="time" type="text" class="materialize-textarea">
-				<label for="time">Total Time</label>
-			</div>
-		</div>
+					</div>
+					<div class="input-field col s3">
+						<i class="material-icons prefix">people_outline</i>
+						<input id="serves" name="serves" type="number" class="materialize-textarea" value="{{recipe.serves}}">
+						<label for="serves">Serves</label>
+					</div>
+					<div class="input-field col s3">
+						<i class="material-icons prefix">access_time</i>
+						<input id="time" name="time" type="text" class="materialize-textarea" value="{{recipe.time}}">
+						<label for="time">Total Time</label>
+					</div>
+				</div>
 
-		<div class="row">
-            <p class="col s3">
-                <input type="checkbox" id="is_vegetarian" class="filled-in"/>
-                <label for="is_vegetarian">Vegetarian</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_vegan" class="filled-in"/>
-                <label for="is_vegan">Vegan</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_glutenFree" class="filled-in"/>
-                <label for="is_glutenFree">Gluten Free</label>
-            </p>
-            <p class="col s3">
-                <input type="checkbox" id="is_dairyFree" class="filled-in"/>
-                <label for="is_dairyFree">Dairy Free</label>
-            </p>
-		</div>
+				<div class="row">
+                    <div class="switch col s3">
+                        <label>
+                        
+                        {% if recipe.is_vegetarian %}
+                            <input id="is_vegetarian" name="is_vegetarian" type="checkbox" checked >
+                        {% else %}
+                            <input id="is_vegetarian" name="is_vegetarian" type="checkbox" >
+                        {% endif%}
+                            <span class="lever"></span>
+                            Vegetarian
+                        </label>
+                    </div>
+                    <div class="switch col s3">
+                        <label>
+                        
+                        {% if recipe.is_vegan %}
+                            <input id="is_vegan" name="is_vegan" type="checkbox" checked >
+                            {% else %}
+                            <input id="is_vegan" name="is_vegan" type="checkbox" >
+                            {% endif%}
+                            <span class="lever"></span>
+                            Vegan
+                        </label>
+                    </div>
+                    <div class="switch col s3">
+                        <label>
+                        
+                        {% if recipe.is_glutenFree %}
+                            <input id="is_glutenFree" name="is_glutenFree" type="checkbox" checked >
+                            {% else %}
+                            <input id="is_glutenFree" name="is_glutenFree" type="checkbox" ">
+                            {% endif%}
+                            <span class="lever"></span>
+                            Gluten Free
+                        </label>
+                    </div>
+                    <div class="switch col s3">
+                        <label>
+                        
+                        {% if recipe.is_dairyFree %}
+                            <input id="is_dairyFree" name="is_dairyFree" type="checkbox" checked >
+                            {% else %}
+                            <input id="is_dairyFree" name="is_dairyFree" type="checkbox" >
+                            {% endif%}
+                            <span class="lever"></span>
+                            Dairy Free
+                        </label>
+                    </div> 
+				</div>
 
-        <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">add_shopping_cart</i>
-				<input id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea">
-				<label for="add_ingredients">Ingredients</label>
-			</div>
-		</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">add_shopping_cart</i>
+						<textarea id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea">{{recipe.add_ingredients}}</textarea>
+						<label for="add_ingredients">Ingredients</label>
+					</div>
+				</div>
 
-        <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">list</i>
-				<input id="method" name="method" type="text" class="materialize-textarea">
-				<label for="method">Method</label>
-			</div>
-		</div>
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">list</i>
+						<textarea id="method" name="method" type="text" class="materialize-textarea">{{recipe.method}}</textarea>
+						<label for="method">Method</label>
+					</div>
+				</div>
 
-        <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
+				<div class="row">
+					<button class="btn waves-effect waves-light" type="submit" name="action">Update Recipe
                 <i class="material-icons right">playlist_add_check</i>
             </button>
-		</div>
+				</div>
 	</form>
 </div>
 
