Added delete_recipe button and function

--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -107,7 +107,7 @@
                         {% if recipe.is_glutenFree %}
                             <input id="is_glutenFree" name="is_glutenFree" type="checkbox" checked >
                             {% else %}
-                            <input id="is_glutenFree" name="is_glutenFree" type="checkbox" ">
+                            <input id="is_glutenFree" name="is_glutenFree" type="checkbox" >
                             {% endif%}
                             <span class="lever"></span>
                             Gluten Free
