--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,11 +15,13 @@
 		</div>
 		<div class="collapsible-body">
 			<div class="row">
-				<div class="col s10">
+				<div class="col s9">
 					<span>{{recipe.recipe_description}}</span>
 				</div>
-				<div class="col s2">
-					<a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">View</a>
+				<div class="col s3">
+					<a href="{{url_for('view_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">View</a>
+                    <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Edit</a>
+                    <a href="{{url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
 				</div>
 			</div>
 		</div>
