--- a/templates/viewrecipe.html
+++ b/templates/viewrecipe.html
@@ -69,5 +69,8 @@
         {{recipe.method}}
 	</div>
 </div>
-
+<div class="row">
+    <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Edit</a>
+    <a href="{{url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
+</div>
 {% endblock %}
