--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -144,9 +144,10 @@
 				</div>
 
 				<div class="row">
-					<button class="btn waves-effect waves-light" type="submit" name="action">Update Recipe
-                <i class="material-icons right">playlist_add_check</i>
-            </button>
+                    <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
+					<button class="btn waves-effect waves-light right" type="submit" name="action">Update Recipe
+                        <i class="material-icons right">playlist_add_check</i>
+                    </button>
 				</div>
 	</form>
 </div>
