Created get_categories, edit categories and delete category functions

--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -15,7 +15,7 @@
 					<input id="add_photo" name="add_photo" class="file-path validate" type="text" placeholder="Add photograph" value="{{recipe.add_photo}}">
                 </div>
 					<div class="btn">
-						<span>Select Image</span>
+						<span>Upload Image</span>
 						<input type="file">
                 </div>
 					</div>
