--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,85 @@
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
 
 	<title>Deeelish</title>
 </head>
 
 <body>
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
+
+	<header>
+		<!-- Dropdown Structure -->
+		<ul id="dropdown1" class="dropdown-content">
+			<li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
+			<li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
+		</ul>
+		<ul id="dropdown2" class="dropdown-content">
+			<li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
+			<li><a href="{{url_for('add_category')}}">Add Category</a></li>
+		</ul>
+		<div class="navbar-fixed">
+			<nav>
+				<div class="nav-wrapper">
+					<a href="#!" class="brand-logo">Deeelish!</a>
+					<a href="#" data-activates="mobile-demo"
+						class="button-collapse"><i class="material-icons">menu</i></a>
+					<ul class="right hide-on-med-and-down">
+						<!-- Dropdown Trigger -->
+						<li><a class="dropdown-button" href="#!"
+								data-activates="dropdown1">Recipes<i class="material-icons right">arrow_drop_down</i></a>
+						</li>
+						<li><a class="dropdown-button" href="#!"
+								data-activates="dropdown2">Categories<i class="material-icons right">arrow_drop_down</i></a>
+						</li>
+						<li><a href="#">Tips & Techniques</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<ul class="side-nav" id="mobile-demo">
+			<li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
+			<li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
+			<li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
+			<li><a href="{{url_for('add_category')}}">Add Categories</a></li>
+			<li><a href="#">Tips & Techniques</a></li>
+		</ul>
+
+	</header>
+    <main>
+	<div class="container">
+		{% block content %}
+		{% endblock %}
+	</div>
+    </main>
+
+	<footer class="page-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12">
+					<h5 class="white-text">Deeelish!</h5>
+					<p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
+						content.</p>
+				</div>
+				<div class="col l4 offset-l2 s12">
+					<h5 class="white-text">Social</h5>
+					<ul>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container">
+				© Deeelish Ltd 2020
+			</div>
+		</div>
+	</footer>
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -25,6 +94,8 @@
 		$(document).ready(function(){
             $('.collapsible').collapsible();
             $('select').material_select();
+            $(".dropdown-button").dropdown();
+            $(".button-collapse").sideNav();
         });
 	</script>
 </body>
