--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -38,16 +38,16 @@
 		</div>
 
         <div class="row">
-            <div class="input-field col s3">
+            <div class="input-field col m6 l3">
             <i class="material-icons prefix">restaurant</i>
                 <select multiple id="meals_courses" name="meal_course_type">
-                    <option value="" disabled selected>Mealtimes and Courses</option>
+                    <option value="" disabled selected>Mealtimes & Courses</option>
                     {% for meals in meals_courses %}
                         <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div class="input-field col s3">
+            <div class="input-field col m6 l3">
             <i class="material-icons prefix">fastfood</i>
                 <select id="cuisines" name="cuisine">
                     <option value="" disabled selected>Cuisines</option>
@@ -56,12 +56,12 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="input-field col s3">
+            <div class="input-field col m6 l3">
 				<i class="material-icons prefix">people_outline</i>
 				<input id="serves" name="serves" type="number" class="materialize-textarea">
 				<label for="serves">Serves</label>
 			</div>
-            <div class="input-field col s3">
+            <div class="input-field col s6 m6 l3">
 				<i class="material-icons prefix">access_time</i>
 				<input id="time" name="time" type="text" class="materialize-textarea">
 				<label for="time">Total Time</label>
@@ -69,28 +69,28 @@
 		</div>
 
 		<div class="row">
-            <div class="switch col s3">
+            <div class="switch col s6 m6 l3">
                 <label>
                     <input id="is_vegetarian" name="is_vegetarian" type="checkbox">
                     <span class="lever"></span>
                     Vegetarian
                 </label>
             </div>
-            <div class="switch col s3">
+            <div class="switch col s6 m6 l3">
                 <label>
                     <input id="is_vegan" name="is_vegan" type="checkbox">
                     <span class="lever"></span>
                     Vegan
                 </label>
             </div>
-            <div class="switch col s3">
+            <div class="switch col s6 m6 l3">
                 <label>
                     <input id="is_is_glutenFree" name="is_glutenFree" type="checkbox">
                     <span class="lever"></span>
                     Gluten Free
                 </label>
             </div>
-            <div class="switch col s3">
+            <div class="switch col s6 m6 l3">
                 <label>
                     <input id="is_dairyFree" name="is_dairyFree" type="checkbox">
                     <span class="lever"></span>
@@ -116,9 +116,10 @@
 		</div>
 
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
+            <button class="btn waves-effect waves-light right" type="submit" name="action">Submit Recipe
                 <i class="material-icons right">playlist_add_check</i>
             </button>
+            <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
 		</div>
 	</form>
 </div>
