--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,7 +5,12 @@
 	<div class="row">
         <h3>Categories</h3>
 	</div>
-	<div class="col s5">
+
+    <div class="row">
+        <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn"><i class="material-icons right">playlist_add</i>Add Category</a>
+    </div>
+
+	<div class="col s12 m6">
 		<h5>Meals and Courses</h5>
 
 		<ul class="collapsible" data-collapsible="accordion">
@@ -23,7 +28,7 @@
 		</ul>
 	</div>
 
-	<div class="col s5">
+	<div class="col s12 m6">
 		<h5>Cuisines</h5>
 
 		<ul class="collapsible" data-collapsible="accordion">
@@ -41,6 +46,5 @@
 		</ul>
 	</div>
 </div>
-
 
 {% endblock %}
