--- a/templates/editmealcat.html
+++ b/templates/editmealcat.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Edit Category: Meals and Courses</h3>
+<h3>Edit Category</h3>
+
+<h5>Meals and Courses</h5>
 
 <div class="row">
 	<form action="{{ url_for('update_meal', meal_id=meal._id) }}" method="POST" class="col s12">
@@ -15,8 +17,13 @@
 		</div>
 
 		<div class="row">
-			<a href="{{ url_for('get_categories') }}" class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
-			<button class="btn waves-effect waves-light right" type="submit" name="action">Update Category<i class="material-icons right">playlist_add_check</i></button>
+			<button class="btn waves-effect waves-light right" type="submit" name="action">Save Changes
+                    <i class="material-icons right">playlist_add_check</i>
+            </button>
+		</div>
+		<div class="row">
+			<a href="{{ url_for('get_categories') }}"
+				class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
 		</div>
 
 	</form>
