--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -26,4 +26,9 @@
 	</li>
 	{% endfor %}
 </ul>
+
+<div class="row">
+    <a href="{{url_for('add_recipe')}}" class="waves-effect waves-light btn"><i class="material-icons right">playlist_add</i>Add Recipe</a>
+</div>
+
 {% endblock %}
