--- a/templates/viewrecipe.html
+++ b/templates/viewrecipe.html
@@ -70,7 +70,10 @@
 	</div>
 </div>
 <div class="row">
-    <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Edit</a>
-    <a href="{{url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">Delete</a>
+    <a href="{{url_for('delete_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light right btn">Delete<i class="material-icons right">delete</i></a>
+    <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light right btn">Edit<i class="material-icons right">create</i></a>
+</div>
+<div class="row">
+    <a href="{{ url_for('get_recipes') }}" class="waves-effect waves-light right btn ">Return<i class="material-icons right">keyboard_return</i></a>
 </div>
 {% endblock %}
