--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -6,69 +6,58 @@
 <div class="row">
 	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12">
 
-        <div class="row">
-            <div class="input-field col s1">
-                <i class="material-icons">add_photo_alternate</i>
-            </div>
+		<div class="row">
+			<div class="input-field col s1"><i class="material-icons">add_photo_alternate</i></div>
 			<div class="file-field input-field col s6">
-				<div class="file-path-wrapper">
-					<input class="file-path validate" type="text" placeholder="Add photograph">
-                </div>
-                <div class="btn">
-					<span>Select Image</span>
-					<input type="file">
-                </div>
+				<div class="file-path-wrapper"><input class="file-path validate" type="text" placeholder="Add photograph"></div>
+				<div class="btn"><span>Select Image</span><input type="file"></div>
             </div>
 		</div>
 
-		<div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">create</i>
-				<input id="recipe_name" name="recipe_name" type="text" class="validate">
-				<label for="icon_prefix">Recipe Name</label>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">subject</i>
-				<input id="recipe_description" name="recipe_description" type="text" class="materialize-textarea">
-				<label for="icon_telephone">Recipe Description</label>
-			</div>
-		</div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">create</i>
+                <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                <label for="icon_prefix">Recipe Name</label>
+            </div>
+        </div>
 
         <div class="row">
-            <div class="input-field col m6 l3">
-            <i class="material-icons prefix">restaurant</i>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">subject</i>
+                <input id="recipe_description" name="recipe_description" type="text" class="materialize-textarea">
+                <label for="icon_telephone">Recipe Description</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col m6 l3"><i class="material-icons prefix">restaurant</i>
                 <select multiple id="meals_courses" name="meal_course_type">
                     <option value="" disabled selected>Mealtimes & Courses</option>
-                    {% for meals in meals_courses %}
-                        <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
-                    {% endfor %}
+                {% for meals in meals_courses %}
+                    <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
+                {% endfor %}
                 </select>
             </div>
-            <div class="input-field col m6 l3">
-            <i class="material-icons prefix">fastfood</i>
+            <div class="input-field col m6 l3"><i class="material-icons prefix">fastfood</i>
                 <select id="cuisines" name="cuisine">
                     <option value="" disabled selected>Cuisines</option>
-                    {% for cuis in cuisines %}
-                        <option value="{{cuis.cuisine}}">{{cuis.cuisine}}</option>
-                    {% endfor %}
+                {% for cuis in cuisines %}
+                    <option value="{{cuis.cuisine}}">{{cuis.cuisine}}</option>
+                {% endfor %}
                 </select>
             </div>
-            <div class="input-field col m6 l3">
-				<i class="material-icons prefix">people_outline</i>
-				<input id="serves" name="serves" type="number" class="materialize-textarea">
-				<label for="serves">Serves</label>
-			</div>
-            <div class="input-field col s6 m6 l3">
-				<i class="material-icons prefix">access_time</i>
-				<input id="time" name="time" type="text" class="materialize-textarea">
-				<label for="time">Total Time</label>
-			</div>
-		</div>
+            <div class="input-field col m6 l3"><i class="material-icons prefix">people_outline</i>
+                <input id="serves" name="serves" type="number" class="materialize-textarea">
+                <label for="serves">Serves</label>
+            </div>
+            <div class="input-field col s6 m6 l3"><i class="material-icons prefix">access_time</i>
+                <input id="time" name="time" type="text" class="materialize-textarea">
+                <label for="time">Total Time</label>
+            </div>
+        </div>
 
-		<div class="row">
+        <div class="row">
             <div class="switch col s6 m6 l3">
                 <label>
                     <input id="is_vegetarian" name="is_vegetarian" type="checkbox">
@@ -96,31 +85,35 @@
                     <span class="lever"></span>
                     Dairy Free
                 </label>
-            </div>    
-		</div>
+            </div>
+        </div>
 
         <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">add_shopping_cart</i>
-				<input id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea">
-				<label for="add_ingredients">Ingredients</label>
-			</div>
-		</div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">add_shopping_cart</i>
+                <input id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea">
+                <label for="add_ingredients">Ingredients</label>
+            </div>
+        </div>
 
         <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">list</i>
-				<input id="method" name="method" type="text" class="materialize-textarea">
-				<label for="method">Method</label>
-			</div>
-		</div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">list</i>
+                <input id="method" name="method" type="text" class="materialize-textarea">
+                <label for="method">Method</label>
+            </div>
+        </div>
 
         <div class="row">
             <button class="btn waves-effect waves-light right" type="submit" name="action">Submit Recipe
-                <i class="material-icons right">playlist_add_check</i>
+                    <i class="material-icons right">playlist_add_check</i>
             </button>
-            <a href="{{ url_for('get_recipes') }}" class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
-		</div>
+        </div>
+        <div class="row">
+            <a href="{{ url_for('get_recipes') }}"
+                    class="btn waves-effect waves-light right">Cancel<i class="material-icons right">cancel</i></a>
+        </div>
+
 	</form>
 </div>
 
