add content to footer and inline styling for social links

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <script src="https://kit.fontawesome.com/dec7c3a058.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
 
 	<title>Deeelish</title>
@@ -65,16 +66,19 @@
 			<div class="row">
 				<div class="col l6 s12">
 					<h5 class="white-text">Deeelish!</h5>
-					<p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-						content.</p>
+					<p class="grey-text text-lighten-4">An online community cookbook. Search our growing collection or share your own deliciso </p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Social</h5>
 					<ul>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span></a></li>
+						<li><a class="grey-text text-lighten-3" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span></a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span></a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.pinterest.co.uk"><i class="fab fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span></a></li>
 					</ul>
 				</div>
 			</div>
