amend footer content and other edits

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -4,13 +4,13 @@
 <h3>Add Recipe</h3>
 
 <div class="row">
-	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12">
+	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12" enctype="multipart/form-data">
 
 		<div class="row">
 			<div class="input-field col s1"><i class="material-icons">add_photo_alternate</i></div>
 			<div class="file-field input-field col s6">
 				<div class="file-path-wrapper"><input class="file-path validate" type="text" placeholder="Add photograph"></div>
-				<div class="btn"><span>Select Image</span><input type="file"></div>
+				<div class="btn"><span>Select Image</span><input type="file" name="file" id="image"></div>
             </div>
 		</div>
 
@@ -74,7 +74,7 @@
             </div>
             <div class="switch col s6 m6 l3">
                 <label>
-                    <input id="is_is_glutenFree" name="is_glutenFree" type="checkbox">
+                    <input id="_is_glutenFree" name="is_glutenFree" type="checkbox">
                     <span class="lever"></span>
                     Gluten Free
                 </label>
