--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 			<div class="row">
 				<div class="col l6 s12">
 					<h5 class="white-text">Deeelish!</h5>
-					<p class="grey-text text-lighten-4">An online community cookbook. Search our growing collection or share your own deliciso </p>
+					<p class="grey-text text-lighten-4">Search and share delicious recipes</p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Social</h5>
@@ -102,6 +102,9 @@
             $(".button-collapse").sideNav();
         });
 	</script>
+
+{% block script %} {% endblock %}
+
 </body>
 
 </html>
