--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,29 +3,69 @@
 
 <h3>Discover Recipes</h3>
 
-<ul class="collapsible" data-collapsible="accordion">
-	{% for recipe in recipes %}
-	<li>
-		<div class="collapsible-header">
-			<div class="row">
-				<div class="col s11"><strong>{{recipe.recipe_name }}</strong>&nbsp- {{recipe.meal_course_type}} |
-					{{recipe.cuisine}}</div>
-				<div class="col s1"><i class="material-icons">expand_more</i></div>
-			</div>
-		</div>
-		<div class="collapsible-body">
-			<div class="row">
-				<div class="col s9">
-					<span>{{recipe.recipe_description}}</span>
-				</div>
-				<div class="col s3">
-					<a href="{{url_for('view_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">View</a>
-				</div>
-			</div>
-		</div>
-	</li>
-	{% endfor %}
-</ul>
+<div class="row">
+    <form action="{{url_for('get_recipes')}}" class="" method="GET">
+        <div class="row">
+            <div class="col s3">
+                <label for="suitability">Suitability</label>
+                <select name="suitability" id="suitability">
+                    <option value="all">All</option>
+                    <option value="vegetarian">Vegeterian</option>
+                    <option value="vegan">Vegan</option>
+                    <option value="gluten">Gluten Free</option>
+                    <option value="dairy">Dairy Free</option>
+                </select>
+            </div>
+            <div class="col s3">
+                <label for="meal_course">Meal Time or Course</label>
+                <select id="meal_course" name="meal_course">
+                    <option value="all">All</option>
+                {% for meals in meals_courses %}
+                    <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
+                {% endfor %}
+                </select>
+            </div>
+            <div class="col s3">
+                <label for="cuisine">Cuisine</label>
+                <select id="cuisine" name="cuisine">
+                    <option value="all">All</option>
+                {% for cuis in cuisines %}
+                    <option value="{{cuis.cuisine}}">{{cuis.cuisine}}</option>
+                {% endfor %}
+                </select>
+            </div>
+            <div class="col s3">
+                <button type="submit" class="waves-effect waves-light btn center">Filter</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+<div class="row">
+    <ul class="collapsible" data-collapsible="accordion">
+        {% for recipe in recipes %}
+        <li>
+            <div class="collapsible-header">
+                <div class="row">
+                    <div class="col s11"><strong>{{recipe.recipe_name }}</strong>&nbsp- {{recipe.meal_course_type}} |
+                        {{recipe.cuisine}}</div>
+                    <div class="col s1"><i class="material-icons">expand_more</i></div>
+                </div>
+            </div>
+            <div class="collapsible-body">
+                <div class="row">
+                    <div class="col s9">
+                        <span>{{recipe.recipe_description}}</span>
+                    </div>
+                    <div class="col s3">
+                        <a href="{{url_for('view_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn btn_small">View</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 
 <div class="row">
     <a href="{{url_for('add_recipe')}}" class="waves-effect waves-light btn"><i class="material-icons right">playlist_add</i>Add Recipe</a>
