--- a/templates/base.html
+++ b/templates/base.html
@@ -17,42 +17,43 @@
 <body>
 
 	<header>
-		<!-- Dropdown Structure -->
-		<ul id="dropdown1" class="dropdown-content">
-			<li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
-			<li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
-		</ul>
-		<ul id="dropdown2" class="dropdown-content">
-			<li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
-			<li><a href="{{url_for('add_category')}}">Add Category</a></li>
-		</ul>
-		<div class="navbar-fixed">
-			<nav>
-				<div class="nav-wrapper">
-					<a href="#!" class="brand-logo">Deeelish!</a>
-					<a href="#" data-activates="mobile-demo"
-						class="button-collapse"><i class="material-icons">menu</i></a>
-					<ul class="right hide-on-med-and-down">
-						<!-- Dropdown Trigger -->
-						<li><a class="dropdown-button" href="#!"
-								data-activates="dropdown1">Recipes<i class="material-icons right">arrow_drop_down</i></a>
-						</li>
-						<li><a class="dropdown-button" href="#!"
-								data-activates="dropdown2">Categories<i class="material-icons right">arrow_drop_down</i></a>
-						</li>
-						<li><a href="#">Tips & Techniques</a></li>
-					</ul>
-				</div>
-			</nav>
-		</div>
-		<ul class="side-nav" id="mobile-demo">
-			<li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
-			<li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
-			<li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
-			<li><a href="{{url_for('add_category')}}">Add Categories</a></li>
-			<li><a href="#">Tips & Techniques</a></li>
-		</ul>
-
+            <!-- Dropdown Structure -->
+            <ul id="dropdown1" class="dropdown-content">
+                <li><a class="grey lighten-2 grey-text text-darken-2" href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
+                <li><a class="grey lighten-2 grey-text text-darken-2" href="{{url_for('add_recipe')}}">Add Recipe</a></li>
+            </ul>
+            <ul id="dropdown2" class="dropdown-content">
+                <li><a class="grey lighten-2 grey-text text-darken-2" href="{{url_for('get_categories')}}">Browse Categories</a></li>
+                <li><a class="grey lighten-2 grey-text text-darken-2"href="{{url_for('add_category')}}">Add Category</a></li>
+            </ul>
+            <div class="navbar-fixed">
+                <nav>
+                    <div class="nav-wrapper grey darken-2">
+                        <div class="container">
+                            <a href="#!" class="brand-logo"><span class="yellow-text text-darken-1">Deee</span>lish<span class="yellow-text text-darken-1">!<span></a>
+                            <a href="#" data-activates="mobile-demo"
+                                class="button-collapse"><i class="material-icons">menu</i></a>
+                            <ul class="right hide-on-med-and-down">
+                                <!-- Dropdown Trigger -->
+                                <li><a class="dropdown-button" href="#!"
+                                        data-activates="dropdown1">Recipes<i class="material-icons yellow-text darken-1 right">arrow_drop_down</i></a>
+                                </li>
+                                <li><a class="dropdown-button" href="#!"
+                                        data-activates="dropdown2">Categories<i class="material-icons yellow-text darken-1 right">arrow_drop_down</i></a>
+                                </li>
+                                <li><a href="#">Tips & Techniques</a></li>
+                            </ul>
+                        </div>    
+                    </div>
+                </nav>
+            </div>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
+                <li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
+                <li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
+                <li><a href="{{url_for('add_category')}}">Add Categories</a></li>
+                <li><a href="#">Tips & Techniques</a></li>
+            </ul>
 	</header>
     <main>
 	<div class="container">
@@ -61,23 +62,23 @@
 	</div>
     </main>
 
-	<footer class="page-footer">
+	<footer class="page-footer grey darken-2">
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
-					<h5 class="white-text">Deeelish!</h5>
+					<h5 class="white-text"><span class="yellow-text text-darken-1">Deee</span>lish<span class="yellow-text text-darken-1">!</span></h5>
 					<p class="grey-text text-lighten-4">Search and share delicious recipes</p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Social</h5>
 					<ul>
-						<li><a class="grey-text text-lighten-3" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
+						<li><a class="yellow-text text-darken-1" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span></a></li>
-						<li><a class="grey-text text-lighten-3" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
+						<li><a class="yellow-text text-darken-1" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span></a></li>
-						<li><a class="grey-text text-lighten-3" href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
+						<li><a class="yellow-text text-darken-1" href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span></a></li>
-						<li><a class="grey-text text-lighten-3" href="https://www.pinterest.co.uk"><i class="fab fa-pinterest" aria-hidden="true"></i>
+						<li><a class="yellow-text text-darken-1" href="https://www.pinterest.co.uk"><i class="fab fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span></a></li>
 					</ul>
 				</div>
@@ -85,7 +86,7 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-				© Deeelish Ltd 2020
+				<span class="yellow-text text-darken-1">©</span> Deeelish Ltd 2020
 			</div>
 		</div>
 	</footer>
