--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Add Category</h3>
+<h3 class="page-head">Add Category</h3>
 
 <h5>Meals and Courses</h5>
 
