--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Add Recipe</h3>
+<h3 class="page-head">Add Recipe</h3>
 
 <div class="row">
 	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12" enctype="multipart/form-data">
