--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,7 +3,7 @@
 
 <div class="row">
 	<div class="row">
-        <h3>Categories</h3>
+        <h3 class="page-head">Categories</h3>
 	</div>
 
     <div class="row">
