--- a/templates/editcuisinecat.html
+++ b/templates/editcuisinecat.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Edit Category</h3>
+<h3 class="page-head">Edit Category</h3>
 
 <h5>Cuisines</h5>
 
