--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Edit Recipe</h3>
+<h3 class="page-head">Edit Recipe</h3>
 
 <div class="row">
 	<form action="{{ url_for('update_recipe', recipe_id=recipe._id) }}" method="POST" class="col s12" enctype="multipart/form-data">
