--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Discover Recipes</h3>
+<h3 class="page-head">Discover Recipes</h3>
 
 <div class="row">
     <form action="{{url_for('get_recipes')}}" class="" method="GET">
@@ -68,7 +68,7 @@
 </div>
 
 <div class="row">
-    <a href="{{url_for('add_recipe')}}" class="waves-effect waves-light btn z-depth-3"><i class="material-icons right">playlist_add</i>Add Recipe</a>
+    <a href="{{url_for('add_recipe')}}" class="waves-effect waves-light btn z-depth-3 right"><i class="material-icons right">playlist_add</i>Add Recipe</a>
 </div>
 
 {% endblock %}
