--- a/templates/base.html
+++ b/templates/base.html
@@ -64,14 +64,14 @@
 
 	<footer class="page-footer grey darken-2">
 		<div class="container">
-			<div class="row">
+			<div class="row footer-row">
 				<div class="col l6 s12">
 					<h5 class="white-text"><span class="yellow-text text-darken-1">Deee</span>lish<span class="yellow-text text-darken-1">!</span></h5>
 					<p class="grey-text text-lighten-4">Search and share delicious recipes</p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Social</h5>
-					<ul>
+					<ul class="social-links">
 						<li><a class="yellow-text text-darken-1" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span></a></li>
 						<li><a class="yellow-text text-darken-1" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
