--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -53,10 +53,10 @@
             </div>
             <div class="collapsible-body">
                 <div class="row">
-                    <div class="col s10">
+                    <div class="col s12 m10">
                         <span>{{recipe.recipe_description}}</span>
                     </div>
-                    <div class="col s2">
+                    <div class="col s12 m2 btn-col">
                         <a href="{{url_for('view_recipe', recipe_id=recipe._id)}}" class="waves-effect waves-light btn z-depth-2 right">View</a>
                     </div>
                 </div>
