--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,12 @@ ul.dropdown-content.select-dropdown li span {
     padding-left: 35px;
 }
 
+
+/*------------Edit Categories-----------*/
+.edit-cat-row {
+    margin-top: 20px;
+}
+
 /*------------Buttons-----------*/
 
 .btn {
