--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -4,7 +4,7 @@
 <h3 class="page-head">Add Recipe</h3>
 
 <div class="row">
-	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12" enctype="multipart/form-data">
+	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12 add-recipe-form" enctype="multipart/form-data">
 
 		<div class="row">
 			<div class="input-field col s1"><i class="material-icons">add_photo_alternate</i></div>
