--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -4,7 +4,7 @@
 <h3 class="page-head">Edit Recipe</h3>
 
 <div class="row">
-	<form action="{{ url_for('update_recipe', recipe_id=recipe._id) }}" method="POST" class="col s12" enctype="multipart/form-data">
+	<form action="{{ url_for('update_recipe', recipe_id=recipe._id) }}" method="POST" class="col s12 edit-recipe-form" enctype="multipart/form-data">
 
 		<div class="row">
 			<div class="input-field col s1"><i class="material-icons">add_photo_alternate</i></div>
@@ -62,7 +62,7 @@
 					<div class="input-field col s12 m6 l3">
 						<i class="material-icons prefix">people_outline</i>
 						<input id="serves" name="serves" type="number" class="materialize-textarea" value="{{recipe.serves}}">
-						<label for="serves">Serves</label>
+						<label class="edit-label" for="serves">Serves</label>
 					</div>
 					<div class="input-field col s12 m6 l3">
 						<i class="material-icons prefix">access_time</i>
